# python-project-lvl4

./: .coveragerc  .gitignore  .travis.yml  Makefile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.dev.txt  requirements.txt  requirements1.txt
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: .env.example  settings.py  urls.py  views.py  wsgi.py
task_manager/templates/: index.html
tasks/: admin.py  forms.py  models.py  urls.py  views.py
tasks/fixtures/: task_status_data.json
tasks/migrations/: 0001_initial.py  0002_auto_20200915_1412.py  0002_auto_20200928_1320.py  0003_auto_20200920_2214.py  0003_auto_20200928_1335.py  0004_auto_20200921_1512.py  0004_auto_20200928_2146.py  0005_auto_20200921_1619.py
tasks/templates/tasks/: assigned_to_detail.html  assigned_to_list.html  base.html  index.html  login_page.html  my_page.html  my_tasks_list.html  status_detail.html  status_list.html  tag_create.html  tag_delete.html  tag_detail.html  tag_update.html  tags_list.html  task_create.html  task_delete.html  task_detail.html  task_update.html  tasks_list.html  users_list.html
tasks/templates/tasks/includes/: task_card_template.html
tasks/tests/: test_auth.py  test_forms.py  test_models.py  test_views.py
templates/: base.html  index.html
templates/registration/: logged_out.html  login.html  signup.html
